--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "displayName": "Angular Components Variables Grouper",
   "publisher": "CodeWithRishabh",
   "description": "",
-  "version": "0.0.3",
+  "version": "0.0.5",
+  "icon": "images/icon.png",
   "engines": {
     "vscode": "^1.71.0"
   },
@@ -14,6 +15,10 @@
     "onCommand:angularcompvargrouper.format"
   ],
   "main": "./dist/extension.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rdmighty/angularcomponentvariablesformatter"
+  },
   "contributes": {
     "commands": [    
       {
